Organização na pasta de POO

--- a/4SEM/ILP007-Programação Orientada a Objetos/Algoritmos feitos em casa/Bruno/Exercício - Conversão de datas Gregoriana para Juliana/.project
+++ b/4SEM/ILP007-Programação Orientada a Objetos/Algoritmos feitos em casa/Bruno/Exercício - Conversão de datas Gregoriana para Juliana/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Exercicio - Aluno</name>
+	<name>Exercício - Conversão de datas Gregoriana para Juliana</name>
 	<comment></comment>
 	<projects>
 	</projects>
